[gd_scene load_steps=14 format=3 uid="uid://b5b2qnmrientc"]

[ext_resource type="Script" uid="uid://c2vlpubc1cxhr" path="res://missions/mission_21.gd" id="1_1k0mj"]
[ext_resource type="Texture2D" uid="uid://c3rbq7njvoaf0" path="res://art/ice_floor3.png" id="2_pjxkr"]
[ext_resource type="PackedScene" uid="uid://cnewpfj0saicm" path="res://missions/Hud_Mission.tscn" id="3_tq35f"]
[ext_resource type="AudioStream" uid="uid://dxrx4epty8q7h" path="res://sound/megalovania.mp3" id="4_1k0mj"]
[ext_resource type="Script" uid="uid://be8h6oqce2lfd" path="res://Music.gd" id="5_e4mqh"]
[ext_resource type="AudioStream" uid="uid://rsh6crkjjxk4" path="res://art/gameover.wav" id="6_1nne2"]
[ext_resource type="AudioStream" uid="uid://cwym12wnl3yb5" path="res://sound/win.mp3" id="7_1rnya"]
[ext_resource type="Script" uid="uid://fh8j43g4cbk6" path="res://DeathBox.gd" id="7_vss6u"]
[ext_resource type="Texture2D" uid="uid://c3avc7vwurlau" path="res://art/water.png" id="8_o8ftt"]
[ext_resource type="Texture2D" uid="uid://dxhgr6yrn6k0m" path="res://art/water2.png" id="9_hcsdg"]
[ext_resource type="PackedScene" uid="uid://dtevh17wsaoom" path="res://Player.tscn" id="10_pwjkr"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_2lshl"]
frames = 2
speed_scale = 2.0
frame_0/texture = ExtResource("8_o8ftt")
frame_1/texture = ExtResource("9_hcsdg")
frame_1/duration = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xy06k"]
size = Vector2(480, 80)

[node name="Mission21" type="Node"]
script = ExtResource("1_1k0mj")

[node name="ColorRect2" type="ColorRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -152.0
offset_right = 272.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="IceTextureFloor" type="TextureRect" parent="."]
self_modulate = Color(0.972549, 1, 1, 0.784314)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -1.0
offset_right = 120.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pjxkr")
expand_mode = 2
stretch_mode = 1
flip_h = true
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MegaTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="HUD_Mission" parent="." instance=ExtResource("3_tq35f")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1k0mj")
script = ExtResource("5_e4mqh")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1nne2")

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1rnya")
volume_db = 4.0

[node name="DeathBox" type="Area2D" parent="."]
position = Vector2(0, 720)
collision_mask = 3
script = ExtResource("7_vss6u")

[node name="WaterTexture" type="TextureRect" parent="DeathBox"]
modulate = Color(1, 1, 1, 0.686275)
texture_filter = 1
offset_top = -128.0
offset_right = 480.0
texture = SubResource("AnimatedTexture_2lshl")
expand_mode = 4
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
position = Vector2(240, -40)
shape = SubResource("RectangleShape2D_xy06k")
debug_color = Color(0.980369, 0, 0.380257, 0.42)

[node name="Player" parent="." instance=ExtResource("10_pwjkr")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="MegaTimer" to="." method="_on_mega_timer_timeout"]
[connection signal="finished" from="Music" to="Music" method="_on_finished"]
[connection signal="body_entered" from="DeathBox" to="Player" method="_on_death_box_body_entered"]
[connection signal="body_entered" from="Player" to="." method="_on_player_collision"]
[connection signal="fell" from="Player" to="." method="_on_player_fell"]
